# microharness-python

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: architecture.md  demo-flow.md
notebooks/: 01_agent_loop_basico.ipynb  01_configuracion_entorno.ipynb  02_context_manager.ipynb  02_tools_y_contexto.ipynb  03_microharness_fastapi_agui.ipynb  03_skills_y_tools.ipynb  04_guion_demo_5_minutos.ipynb  04_subagentes.ipynb  05_memoria_y_sesiones.ipynb  06_lifecycle_hooks.ipynb  07_fastapi_agui.ipynb
scripts/: load_model_from_akv.sh  run_demo_client.py  run_native_request.py  run_request.py  run_server.sh  smoke_agui.py
src/microharness/: __init__.py  client.py  config.py  context.py  harness.py  lifecycle.py  maf_native.py  memory.py  server.py  subagents.py  tools.py
tests/: test_config.py  test_maf_native.py
web/static/: index.html
working/: contexto_harness.md
working/fallback/: expected_demo_summary.md  expected_response.md  expected_session_state.json
working/reference/: expected_agent_summary.md  expected_response.md  expected_session_state.json
